--- a/TelegramNews/appsettings.json
+++ b/TelegramNews/appsettings.json
@@ -4,5 +4,10 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=TelegramPosts;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
