Added one theme for all pages

--- a/TelegramNews/TelegramNews.csproj
+++ b/TelegramNews/TelegramNews.csproj
@@ -37,6 +37,7 @@
     <None Include="appsettings.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Include="wwwroot\attachment.png" />
   </ItemGroup>
 
 
